# cpipe

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
src/common/: CMakeLists.txt  error.cpp  error.h  json_utils.cpp  json_utils.h  log.cpp  log.h  types.hpp  version.cpp.in
src/cpipe/cli/: CMakeLists.txt  main.cpp
src/cpipe/color/: CMakeLists.txt  Cube3dLutLoader.cpp  HeifReader.cpp  HeifWriter.cpp  IccV4_4Writer.cpp  OcioVulkanProcessor.cpp
src/cpipe/core/: BufferLayout.cpp  BufferMetadata.cpp  CMakeLists.txt  CoreStub.cpp  CpuBuffer.cpp  PixelFormat.cpp  Status.cpp  core_stub.cpp  empty.cpp  stub.cpp
src/cpipe/nodes/: CMakeLists.txt  NodesStub.cpp  ParamUtils.hpp  builtin_link.cpp  empty.cpp  nodes_stub.cpp  passthrough.cpp  passthrough.json  passthrough_copy_dispatch.cpp  passthrough_copy_generator.cpp  stub.cpp
src/cpipe/nodes/color/: lut3d.cpp  (+6 more)
src/cpipe/runtime/: BufferHandle.cpp  CMakeLists.txt  ComputeContext.cpp  HalideBufferAdapter.cpp  HalideFilterRegistry.cpp  HostContext.cpp  HostSuites.cpp  HostSuites.hpp  InferenceContext.cpp  MemoryPlanner.cpp  MetadataHandle.cpp  ParamHandle.cpp  Pipeline.cpp  PrecisionPlanner.cpp  Registry.cpp  RuntimeHandles.hpp  RuntimeStub.cpp  RuntimeSuites.hpp  Scheduler.cpp  Sync.cpp  TaskExecutor.cpp  VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanDevicePlane.cpp  VulkanImage.cpp  empty.cpp  runtime_stub.cpp  stub.cpp
src/cpipe/sdk/: CMakeLists.txt  sdk_stub.cpp
src/cpipe/server/: CMakeLists.txt  EditorProtocol.cpp  EditorServer.cpp  ServerStub.cpp  ThumbnailEncoder.cpp  empty.cpp  server.cpp  server_stub.cpp  stub.cpp
src/platform/: CMakeLists.txt
src/platform/common/: buffer_pool.cpp
src/plugin/: CMakeLists.txt  plugin_loader.cpp  plugin_loader.h  plugin_registry.cpp  plugin_registry.h
tests/: CMakeLists.txt  lsan_suppressions.txt
tests/corpus/: pixel8pro-qbc.dng  pixel8pro-qbc.source.md  pixel8pro.dng  pixel8pro.source.md
tests/fixtures/: CMakeLists.txt  dangling_pipeline-v0.2.json  dangling_pipeline-v0.3.json  dangling_pipeline-v0.4.json  dangling_pipeline.json  gen_golden_isp_nodes.cpp  gen_passthrough_input.cpp  invalid_pipeline-v0.2.json  invalid_pipeline-v0.3.json  invalid_pipeline-v0.4.json  invalid_pipeline.json  min-pipeline.cpipe.json  params_invalid_target-v0.3.json  params_invalid_target-v0.4.json  passthrough-v0.2.json  passthrough-v0.3.json  passthrough-v0.4.json  passthrough.json  precision_auto_insert-v0.2.json  precision_auto_insert-v0.3.json  precision_auto_insert-v0.4.json  precision_convert_user-v0.2.json  precision_convert_user-v0.3.json  precision_convert_user-v0.4.json  precision_mismatch-v0.2.json  precision_mismatch-v0.3.json  precision_mismatch-v0.4.json  unknown_node_pipeline.json
tests/fixtures/mock_plugin/: CMakeLists.txt  mock_plugin.c  mock_plugin_abi_mismatch.c  mock_plugin_missing_symbols.c
tests/golden/: README.md
tests/golden/blacklevel.dng_levels/: in.exr  out.exr
tests/golden/color.3d_lut/: in.exr  look.cube  out.exr  reference.md
tests/golden/color.scene_linear_to_display/: in.exr  out.exr  reference.md
tests/golden/colormatrix.dng_to_working/: in.exr  out.exr  reference.md
tests/golden/demosaic.amaze/: in.exr  out.exr  reference.md
tests/golden/demosaic.bilinear/: in.exr  out.exr  reference.md
tests/golden/demosaic.quad_bayer_remosaic/: in.exr  out.exr  reference.md
tests/golden/demosaic.rcd/: in.exr  out.exr  reference.md
tests/golden/denoise.bm3d/: in.exr  out.exr  reference.md
tests/golden/denoise.guided_filter/: out.exr  reference.md
tests/golden/denoise.wavelet_bayes_shrink/: in.exr  out.exr  reference.md
tests/golden/lens.dng_opcode_list_3/: in.exr  out.exr  reference.md
tests/golden/lens.shading_gainmap/: in.exr  out.exr  reference.md
tests/golden/linearize.dng_lut/: in.exr  out.exr
tests/golden/sharpen.edge_aware_usm/: in.exr  out.exr  reference.md
tests/golden/tone.aces_filmic/: out.exr  reference.md
tests/golden/tone.filmic_rgb/: in.exr  out.exr  reference.md
tests/golden/tone.mertens_local/: normal.exr  out.exr  over.exr  reference.md  under.exr
tests/golden/tone.reinhard/: out.exr  reference.md
tests/golden/wb.dual_illuminant/: in.exr  out.exr  reference.md
tests/golden/wb.greyworld_auto/: in.exr  out.exr  reference.md
tests/integration/: CMakeLists.txt  full_classic_pipeline_test_utils.hpp  test_diamond_dag_parallel.cpp  test_full_classic_pipeline_dng_to_heif_hdr.cpp  test_full_classic_pipeline_dng_to_heif_sdr.cpp  test_min_pipeline_dng_to_heif.cpp  test_passthrough_end_to_end.cpp
tests/unit/: CMakeLists.txt  color_node_fixture.hpp  demosaic_bilinear_fixture.hpp  dng_test_fixture.hpp  gainmap_test_fixture.hpp  node_param_test_utils.hpp  noop_halide_generator.cpp  opcode_list_3_test_fixture.hpp  registry_fixture.cpp  test_abi_c_compile.c  test_buffer_layout.cpp  test_buffer_metadata.cpp  test_buffer_usage.cpp  test_cli_p3_scaffolding.cpp  test_compute_suite_v1_ext.cpp  test_cpipe_node_c_abi.c  test_cpipe_serve_cli.cpp  test_cpu_buffer.cpp  test_cube_3d_lut_loader.cpp  test_dng_reader.cpp  test_editor_protocol_schema.cpp  test_editor_server_health.cpp  test_editor_server_rest.cpp  test_editor_server_ws.cpp  test_golden_isp_nodes.cpp  test_halide_adapter.cpp  test_halide_adapter_generator.cpp  test_icc_v4_4_writer.cpp  test_install_editor_static.cpp  test_memory_planner.cpp  test_metadata_suite.cpp  test_node_blacklevel.cpp  test_node_color_3d_lut.cpp  test_node_color_3d_lut_params.cpp  test_node_color_scene_linear_to_display.cpp  test_node_colormatrix.cpp  test_node_demosaic_amaze.cpp  test_node_demosaic_bilinear.cpp  test_node_demosaic_bilinear_vulkan.cpp  test_node_demosaic_quad_bayer_remosaic.cpp  (+47 more)
tests/unit/common/: CMakeLists.txt  error_test.cpp  json_utils_test.cpp  log_test.cpp  version_test.cpp
tests/unit/platform/: CMakeLists.txt  buffer_pool_test.cpp
tests/unit/plugin/: CMakeLists.txt  plugin_loader_test.cpp  plugin_registry_test.cpp
(+255 files in other folders)
